--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -3,12 +3,12 @@ name: tests
 on:
   push:
     branches:
-      - master
+      - main
   pull_request:
     branches:
       - dev
       - develop
-      - master
+      - main
 
 
 jobs:
